--- a/projects/DailySpendLimit/src/app/setup/setup.component.html
+++ b/projects/DailySpendLimit/src/app/setup/setup.component.html
@@ -1,3 +1,20 @@
-<p>
-  setup works!
-</p>
+<page-title name="Setup" [canAddNew]="false"></page-title>
+
+<general-error [errors]="errors"></general-error>
+
+<form name="form" role="form" novalidate (ngSubmit)="onSubmit()">
+  <mat-card>
+    <mat-card-content>
+      <h3>How much do you want to spend daily?</h3>
+
+      <!-- <input-integer label="Daily Spending Limit" [required]="true" [model]="model.dailyLimit" (modelChange)="model.dailyLimit=$event"
+        [errMsg]="errors?.dailyLimit"></input-integer> -->
+      <input-usd label="Daily Spending Limit" [required]="true" [model]="model.dailyLimit" (modelChange)="model.dailyLimit=$event"
+        [errMsg]="errors?.dailyLimit"></input-usd>
+    </mat-card-content>
+
+    <mat-card-actions>
+      <button mat-raised-button color="primary">Save</button>
+    </mat-card-actions>
+  </mat-card>
+</form>
