--- a/projects/material-helpers/src/lib/input-date/input-date.component.html
+++ b/projects/material-helpers/src/lib/input-date/input-date.component.html
@@ -2,7 +2,7 @@
   <mat-label>{{label}}</mat-label>
   <input matInput [matDatepicker]="picker" [attr.maxlength]="_maxlength" [attr.style]="_style" [placeholder]="placeholder"
     [disabled]="disabled" [required]="required" [(ngModel)]="_model" [errorStateMatcher]="errorStateMatcher"
-    (dateInput)="onChange()">
+    (dateChange)="onChange()">
   <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
   <mat-datepicker #picker></mat-datepicker>
   <mat-hint>{{hint}}</mat-hint>
