--- a/projects/material-helpers/src/lib/input-usd/input-usd.component.html
+++ b/projects/material-helpers/src/lib/input-usd/input-usd.component.html
@@ -2,7 +2,7 @@
   <mat-label>{{label}}</mat-label>
   <span matPrefix>$&nbsp;</span>
   <input maxlength="11" matInput [attr.name]="inputName" [attr.style]="_style" [placeholder]="placeholder" [disabled]="disabled"
-    [required]="required" [(ngModel)]="_model" [errorStateMatcher]="errorStateMatcher" (input)="onChange()">
+    [required]="required" [(ngModel)]="_model" [errorStateMatcher]="errorStateMatcher" (change)="onChange()">
   <mat-hint>{{hint}}</mat-hint>
   <mat-error>{{errMsg}}</mat-error>
 </mat-form-field>
