--- a/projects/DailySpendLimit/src/app/app-root/app-root.component.html
+++ b/projects/DailySpendLimit/src/app/app-root/app-root.component.html
@@ -14,9 +14,9 @@
         <mat-icon>home</mat-icon>
         <span>Home</span>
       </button>
-      <button mat-menu-item routerLink="recipes">
-        <mat-icon>kitchen</mat-icon>
-        <span>Recipes</span>
+      <button mat-menu-item routerLink="dashboard">
+        <mat-icon>attach_money</mat-icon>
+        <span>Dashboard</span>
       </button>
       <button mat-menu-item routerLink="setup">
         <mat-icon>settings</mat-icon>
