--- a/projects/material-helpers/src/lib/input-email/input-email.component.html
+++ b/projects/material-helpers/src/lib/input-email/input-email.component.html
@@ -1,6 +1,6 @@
 <mat-form-field appearance="standard" style="width: 100%">
   <mat-label>{{label}}</mat-label>
-  <input type="number" matInput [attr.name]="inputName" [attr.maxlength]="_maxlength" [attr.style]="_style"
+  <input type="email" matInput [attr.name]="inputName" [attr.maxlength]="_maxlength" [attr.style]="_style"
     [placeholder]="placeholder" [disabled]="disabled" [required]="required" [(ngModel)]="_model" [errorStateMatcher]="errorStateMatcher"
     (change)="onChange()">
   <mat-hint>{{hint}}</mat-hint>
