--- a/projects/material-helpers/src/lib/input-usd/input-usd.component.html
+++ b/projects/material-helpers/src/lib/input-usd/input-usd.component.html
@@ -1,8 +1,8 @@
 <mat-form-field appearance="standard" style="width: 100%">
   <mat-label>{{label}}</mat-label>
   <span matPrefix>$&nbsp;</span>
-  <input type="number" maxlength="11" matInput [attr.name]="inputName" [attr.style]="_style" [placeholder]="placeholder"
-    [disabled]="disabled" [required]="required" [(ngModel)]="_model" [errorStateMatcher]="errorStateMatcher" (change)="onChange()">
+  <input maxlength="11" matInput [attr.name]="inputName" [attr.style]="_style" [placeholder]="placeholder" [disabled]="disabled"
+    [required]="required" [(ngModel)]="_model" [errorStateMatcher]="errorStateMatcher" (change)="onChange()">
   <mat-hint>{{hint}}</mat-hint>
   <mat-error>{{errMsg}}</mat-error>
 </mat-form-field>
