--- a/projects/DailySpendLimit/src/app/homepage/homepage.component.html
+++ b/projects/DailySpendLimit/src/app/homepage/homepage.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="column" fxFlex="grow" fxLayoutAlign="start center" style="background-image: url('/assets/homepage.jpg'); background-size: cover; background-position: bottom">
+<div fxLayout="column" fxFlex="grow" fxLayoutAlign="start center" style="background-image: url('assets/homepage.jpg'); background-size: cover; background-position: bottom">
   <section fxFlex="grow"></section>
   <div class="mat-display-2 app-title">Daily Spend Limit</div>
   <section fxFlex="grow"></section>
