--- a/projects/DailySpendLimit/src/app/homepage/homepage.component.html
+++ b/projects/DailySpendLimit/src/app/homepage/homepage.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="column" fxFlex="grow" fxLayoutAlign="start center" style="background-image: url('assets/homepage.jpg'); background-size: cover; background-position: bottom">
   <section fxFlex="grow"></section>
   <div class="mat-display-2 app-title">Daily Spend Limit</div>
+  <a mat-raised-button color="accent" (click)="onGetStarted()">Get Started</a>
   <section fxFlex="grow"></section>
-  <a style="width: 100%" mat-raised-button color="accent" (click)="onGetStarted()">Get Started</a>
 </div>
