--- a/projects/material-helpers/src/lib/general-error/general-error.component.html
+++ b/projects/material-helpers/src/lib/general-error/general-error.component.html
@@ -6,6 +6,6 @@
     <span>Not found.</span>
   </mat-toolbar-row>
   <mat-toolbar-row *ngFor="let item of errors.general?.default">
-    <span>{{item}}</span>
+    <span style="white-space: initial">{{item}}</span>
   </mat-toolbar-row>
 </mat-toolbar>
