--- a/projects/DailySpendLimit/src/app/setup/setup-permissions.component.html
+++ b/projects/DailySpendLimit/src/app/setup/setup-permissions.component.html
@@ -12,7 +12,7 @@
     <mat-card-content>
       <mat-list>
         <h3 mat-subheader>Currently shared with</h3>
-        <mat-list-item *ngFor="let item of model.permissions">
+        <mat-list-item *ngFor="let item of model?.permissions">
           <p matLine> {{item.emailAddress}} </p>
           <p matLine> {{item.role}} </p>
         </mat-list-item>
