--- a/projects/VinesToWinesDM/src/app/homepage/homepage.component.html
+++ b/projects/VinesToWinesDM/src/app/homepage/homepage.component.html
@@ -18,7 +18,7 @@
       <mat-card fxLayout="column" ngStyle.gt-xs="height: 100%">
         <mat-card-content fxFlex.gt-xs="grow">
           <h2>Events</h2>
-          <!-- <app-event-summary></app-event-summary> -->
+          <app-event-summary></app-event-summary>
         </mat-card-content>
         <mat-card-actions>
           <a mat-raised-button color="accent" routerLink="events">Learn more</a>
