--- a/projects/VinesToWinesDM/src/app/app-root/app-footer/app-footer.component.html
+++ b/projects/VinesToWinesDM/src/app/app-root/app-footer/app-footer.component.html
@@ -4,7 +4,7 @@
     <div class="mat-body-2" fxLayout="row">
       <mat-icon style="padding-top: 0.25em">place</mat-icon>
       <a href="https://goo.gl/maps/8PKWiWtz4NF2" target="_blank" rel="noopener">
-        684 20th St<br>Des Moines, IA 50314
+        684 20th St Des Moines, IA 50314
       </a>
     </div>
 
@@ -14,12 +14,12 @@
     </div>
   </mat-toolbar-row>
 
-  <!-- <mat-toolbar-row fxLayout="column" fxLayoutAlign="center start" style="height: auto">
-    Newsletter
+  <mat-toolbar-row fxLayout="column" fxLayoutAlign="center start" style="height: auto">
+    <!-- Newsletter
     <div class="mat-body-2">
       <a href="mailto:eric@vinestowinesdm.com?subject=Send%20Me%20The%20VINES%20to%20WINES%20newsletter!">Email us</a>
       and we will put you on the list.
-    </div>
+    </div> -->
     <a class="mat-body-2" routerLink="admin">Admin</a>
-  </mat-toolbar-row> -->
+  </mat-toolbar-row>
 </mat-toolbar>
