--- a/projects/VinesToWinesDM/src/app/homepage/homepage.component.html
+++ b/projects/VinesToWinesDM/src/app/homepage/homepage.component.html
@@ -6,7 +6,7 @@
       <mat-card fxLayout="column" ngStyle.gt-xs="height: 100%">
         <mat-card-content fxFlex.gt-xs="grow">
           <h2>About Us</h2>
-          <about-us-summary></about-us-summary>
+          <vtw-about-us-summary></vtw-about-us-summary>
         </mat-card-content>
         <mat-card-actions>
           <a mat-raised-button color="accent" routerLink="about-us">Learn more</a>
@@ -18,7 +18,7 @@
       <mat-card fxLayout="column" ngStyle.gt-xs="height: 100%">
         <mat-card-content fxFlex.gt-xs="grow">
           <h2>Events</h2>
-          <app-event-summary></app-event-summary>
+          <vtw-events-summary></vtw-events-summary>
         </mat-card-content>
         <mat-card-actions>
           <a mat-raised-button color="accent" routerLink="events">Learn more</a>
@@ -29,8 +29,8 @@
     <section fxFlex="100%" fxFlex.gt-xs="33%">
       <mat-card fxLayout="column" ngStyle.gt-xs="height: 100%">
         <mat-card-content fxFlex.gt-xs="grow">
-          <h2>Wine List</h2>
-          <!-- <app-sermon-summary></app-sermon-summary> -->
+          <h2>Our Wines</h2>
+          <!-- <vtw-wines-summary></vtw-wines-summary> -->
         </mat-card-content>
         <mat-card-actions>
           <a mat-raised-button color="accent" routerLink="sermons">Learn more</a>
@@ -39,21 +39,3 @@
     </section>
   </section>
 </section>
-
-
-<!-- <mat-card>
-  <p>
-    Vines To Wines is a unique winery where wine lovers can experience the fun of working in a winery by actually
-    making
-    their own wines.And not just any old wines either, but really good wines, such as Stag's Leap District, Napa Valley
-    Merlot, Sonoma Chardonnay, Columbia Valley Riesling, Lodi Old Vine Zinfandel, Riesling Ice Style Wine, New Zealand
-    Sauvignon Blanc, Italian Valpolicella and Pinot Grigio, and many, many others.
-  </p>
-  <p>
-    Centrally located in the historic Sherman Hill District of Des Moines, customers go down into the wine cellar of a
-    century old home to make their wines. When the weather permits, wine tastings, and wine makings are done outside,
-    on a patio covered by an Italian style pergola with grape vines, and hundreds of clusters of grapes providing
-    shade. In this unique environment Vines To Wines provides central Iowans with the opportunity to learn about wines,
-    and to have a lot fun in the process, as they become their own wine maker.
-  </p>
-</mat-card> -->
