--- a/projects/StavesChurch/src/app/homepage/homepage.component.html
+++ b/projects/StavesChurch/src/app/homepage/homepage.component.html
@@ -1,5 +1,4 @@
-<homepage-banner [photoIdentifier]="model.bannerPhotoIdentifier" [photoTransparency]="model.bannerPhotoTransparency"
-  [titleColor]="model.bannerTitleColor" [title]="model.bannerTitle" [subTitle]="model.bannerSubTitle"></homepage-banner>
+<homepage-banner></homepage-banner>
 
 <section fxLayout="column" fxLayoutGap="1em">
   <section fxLayout="column" fxLayoutGap="1em" fxLayout.gt-xs="row" fxLayoutAlign.gt-xs="center stretch">
