--- a/projects/StavesChurch/src/app/homepage/banner/homepage-banner.component.scss
+++ b/projects/StavesChurch/src/app/homepage/banner/homepage-banner.component.scss
@@ -2,6 +2,12 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  color: #fff;
   height: 40vh;
   text-align: center;
+}
+
+.app-title {
+  font-family: 'Great Vibes', cursive;
+  margin: .5em 0;
 }
