--- a/projects/StavesChurch/src/styles/styles.scss
+++ b/projects/StavesChurch/src/styles/styles.scss
@@ -1,34 +1,4 @@
-@import '~@angular/material/theming';
-// Plus imports for other components in your app.
-
-// Define a custom typography config that overrides the font-family as well as the
-// `headlines` and `body-1` levels.
-$custom-typography: mat-typography-config(
-  $body-1: mat-typography-level(16px, 24px, 400),
-  $body-2: mat-typography-level(16px, 24px, 500)
-);
-
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
-@include mat-core($custom-typography);
-
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://www.google.com/design/spec/style/color.html
-$my-app-primary: mat-palette($mat-indigo);
-$my-app-accent:  mat-palette($mat-pink, A200, A100, A400);
-
-// The warn palette is optional (defaults to red).
-$my-app-warn:    mat-palette($mat-red);
-
-// Create the theme object (a Sass map containing all of the palettes).
-$my-app-theme: mat-light-theme($my-app-primary, $my-app-accent, $my-app-warn);
-
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
-@include angular-material-theme($my-app-theme);
+@import 'theme';
 
 * {
   -webkit-box-sizing: border-box;
@@ -39,14 +9,10 @@ $my-app-theme: mat-light-theme($my-app-primary, $my-app-accent, $my-app-warn);
 body {
   margin: 0;
 }
-
 @font-face {
   font-family: "church";
-  src:url("church.eot");
-  src:url("church.eot?#iefix") format("embedded-opentype"),
-    url("church.woff") format("woff"),
-    url("church.ttf") format("truetype"),
-    url("church.svg#church") format("svg");
+  src: url("church.eot");
+  src: url("church.eot?#iefix") format("embedded-opentype"), url("church.woff") format("woff"), url("church.ttf") format("truetype"), url("church.svg#church") format("svg");
   font-weight: normal;
   font-style: normal;
 
@@ -65,8 +31,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-[class^="church-"]:before,
-[class*=" church-"]:before {
+[class*=" church-"]:before,
+[class^="church-"]:before {
   font-family: "church" !important;
   font-style: normal !important;
   font-weight: normal !important;
@@ -81,15 +47,19 @@ body {
 .church-cross-and-flame-top:before {
   content: "\62";
 }
+
 .church-faith:before {
   content: "\63";
 }
+
 .church-pray:before {
   content: "\64";
 }
+
 .church-rules:before {
   content: "\65";
 }
+
 .church-cross-and-flame-bottom:before {
   content: "\61";
 }
