--- a/projects/StavesChurch/src/app/admin/editor/choose-internal-link.component.html
+++ b/projects/StavesChurch/src/app/admin/editor/choose-internal-link.component.html
@@ -5,6 +5,6 @@
     </mat-nav-list>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-raised-button color="accent" (click)="onOKClick()">OK</button>
+    <button mat-raised-button (click)="onCancelClick()">Cancel</button>
   </mat-card-actions>
 </mat-card>
