--- a/projects/VinesToWinesDM/src/app/admin/editor/choose-external-link.component.html
+++ b/projects/VinesToWinesDM/src/app/admin/editor/choose-external-link.component.html
@@ -6,6 +6,7 @@
     </mat-form-field>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-raised-button color="accent" (click)="onOKClick() ">OK</button>
+    <button mat-raised-button color="accent" (click)="onOKClick()">OK</button>
+    <button mat-raised-button (click)="onCancelClick()">Cancel</button>
   </mat-card-actions>
 </mat-card>
