--- a/projects/VinesToWinesDM/src/app/admin/editor/editor.component.html
+++ b/projects/VinesToWinesDM/src/app/admin/editor/editor.component.html
@@ -1,5 +1,5 @@
 <section *ngIf="!choosingPhoto && !choosingInternalLink && !choosingExternalLink">
-  <mat-toolbar style="position: sticky; top: 0;" *ngIf="!disabled">
+  <mat-toolbar *ngIf="!disabled" style="position: sticky; top: 0">
     <button mat-icon-button matTooltip="Bold" matTooltipShowDelay="500" (click)="execCommand('bold')">
       <mat-icon>format_bold</mat-icon>
     </button>
@@ -62,14 +62,14 @@
       <mat-icon>format_indent_increase</mat-icon>
     </button>
 
-    <button mat-button [matMenuTriggerFor]="linkMenu" (menuOpened)="onLinkOpen()" (menuClosed)="onLinkClose()">
+    <button mat-button [matMenuTriggerFor]="linkMenu">
       Link
       <mat-icon>arrow_drop_down</mat-icon>
     </button>
     <mat-menu #linkMenu>
       <button mat-menu-item (click)="onInternalLink()">Internal</button>
       <button mat-menu-item (click)="onExternalLink()">External</button>
-      <button mat-menu-item (click)="execCommand('unlink')">Remove</button>
+      <button mat-menu-item (click)="onUnlink()">Remove</button>
     </mat-menu>
 
     <button mat-icon-button matTooltip="Add photo" matTooltipShowDelay="500" (click)="onAddPhoto()">
