--- a/projects/StavesChurch/src/app/announcement/announcements/announcements.component.html
+++ b/projects/StavesChurch/src/app/announcement/announcements/announcements.component.html
@@ -1,10 +1,6 @@
-<mat-list *ngIf="errors?.general?.default">
-  <mat-list-item *ngFor="let item of errors.general.default">{{item}}</mat-list-item>
-</mat-list>
+<page-title name="Announcements"></page-title>
 
-<mat-toolbar>
-  <div>Announcements</div>
-</mat-toolbar>
+<general-error [errors]="errors"></general-error>
 
 <mat-card>
   <mat-card-content (click)="onContentClick($event)">
