--- a/projects/StavesChurch/src/app/admin/announcement/admin-announcement-list.component.html
+++ b/projects/StavesChurch/src/app/admin/announcement/admin-announcement-list.component.html
@@ -1,4 +1,4 @@
-<page-title name="Announcement list" [canAddNew]="false"></page-title>
+<page-title name="Announcement list"></page-title>
 
 <general-error [errors]="errors"></general-error>
 
