--- a/projects/material-helpers/src/lib/page-title/page-title.component.html
+++ b/projects/material-helpers/src/lib/page-title/page-title.component.html
@@ -1,4 +1,3 @@
 <mat-toolbar>
-  <div fxFlex="grow">{{name}}</div>
-  <button color="accent" mat-raised-button *ngIf="canAddNew" (click)="onAddNew()">Add new</button>
+  <div>{{name}}</div>
 </mat-toolbar>
