--- a/projects/StavesChurch/src/app/admin/caller/admin-caller-list.component.html
+++ b/projects/StavesChurch/src/app/admin/caller/admin-caller-list.component.html
@@ -1,10 +1,6 @@
-<mat-list *ngIf="errors?.general?.default">
-  <mat-list-item *ngFor="let item of errors.general.default">{{item}}</mat-list-item>
-</mat-list>
+<page-title name="Caller List"></page-title>
 
-<mat-toolbar>
-  <div>Caller list</div>
-</mat-toolbar>
+<general-error [errors]="errors"></general-error>
 
 <mat-card>
   <section fxLayout="row">
