--- a/projects/StavesChurch/src/app/admin/dashboard/admin-dashboard.component.html
+++ b/projects/StavesChurch/src/app/admin/dashboard/admin-dashboard.component.html
@@ -1,11 +1,9 @@
-<mat-toolbar>
-  <span>Admin</span>
-</mat-toolbar>
+<page-title name="Admin"></page-title>
 
 <mat-card>
   Welcome {{userName}}. Which part of this website would you like to change?
 
   <mat-nav-list>
-    <a mat-list-item *ngFor="let item of pages.adminList" routerLink="../{{item.link}}">{{item.name}}</a>
+    <a mat-list-item *ngFor="let item of adminPages" routerLink="../{{item.link}}">{{item.name}}</a>
   </mat-nav-list>
 </mat-card>
