--- a/projects/StavesChurch/src/app/admin/ministries/admin-ministries-edit.component.html
+++ b/projects/StavesChurch/src/app/admin/ministries/admin-ministries-edit.component.html
@@ -1,8 +1,6 @@
-<general-error [errors]="errors"></general-error>
+<page-title name="Ministries Edit"></page-title>
 
-<mat-toolbar>
-  <span>Ministries Edit</span>
-</mat-toolbar>
+<general-error [errors]="errors"></general-error>
 
 <mat-card>
   <mat-card-content>
@@ -10,7 +8,7 @@
       placeholder="mm/dd/yyyy" [disabled]="readOnly" [errMsg]="errors?.effectiveFrom"></input-date>
 
     <h2 style="margin:0">Header</h2>
-    <editor [content]="model.content.header" (changed)="onHeaderChange($event)" [disabled]="readOnly"></editor>
+    <cms-editor [content]="model.content.header" (changed)="onHeaderChange($event)" [disabled]="readOnly"></cms-editor>
 
     <h2 style="margin-top:1em;margin-bottom: -1em">Ministries</h2>
     <section style="margin-top: 1em" *ngFor="let item of model.content.list; let i=index">
@@ -32,14 +30,15 @@
         </button>
       </section>
 
-      <editor [content]="item.purpose" (changed)="onMinistryPurposeChange(item, $event)" [disabled]="readOnly"></editor>
+      <cms-editor [content]="item.purpose" (changed)="onMinistryPurposeChange(item, $event)" [disabled]="readOnly"></cms-editor>
     </section>
   </mat-card-content>
 
   <mat-card-actions>
-    <page-command-buttons [model]="model" [preApproveCheck]="createCanApprove()" (approve)="onApprove($event)" (change)="onChange($event)"
-      (delete)="onDelete($event)" (recall)="onRecall($event)" (recover)="onRecover($event)" (error)="onError($event)"></page-command-buttons>
+    <cms-page-command-buttons [model]="model" [preApproveCheck]="createCanApprove()" (approve)="onApprove($event)"
+      (change)="onChange($event)" (delete)="onDelete($event)" (recall)="onRecall($event)" (recover)="onRecover($event)"
+      (error)="onError($event)"></cms-page-command-buttons>
     <br>
-    <page-status [model]="model"></page-status>
+    <cms-page-status [model]="model"></cms-page-status>
   </mat-card-actions>
 </mat-card>
