--- a/projects/StavesChurch/src/app/admin/sermon/admin-sermon-edit.component.html
+++ b/projects/StavesChurch/src/app/admin/sermon/admin-sermon-edit.component.html
@@ -1,12 +1,6 @@
-<mat-toolbar class="generalError" color="warn" *ngIf="errors?.general?.default">
-  <mat-toolbar-row *ngFor="let item of errors.general.default">
-    <span>{{item}}</span>
-  </mat-toolbar-row>
-</mat-toolbar>
+<page-title name="Sermon Edit"></page-title>
 
-<mat-toolbar>
-  <span>Sermon edit</span>
-</mat-toolbar>
+<general-error [errors]="errors"></general-error>
 
 <mat-card>
   <mat-card-content>
@@ -36,10 +30,10 @@
   </mat-card-content>
 
   <mat-card-actions>
-    <page-command-buttons [model]="model" [preApproveCheck]="createCanApprove()" (approve)="onApprove($event)"
+    <cms-page-command-buttons [model]="model" [preApproveCheck]="createCanApprove()" (approve)="onApprove($event)"
       [allowOverlap]="true" (change)="onChange($event)" (delete)="onDelete($event)" (recall)="onRecall($event)"
-      (recover)="onRecover($event)" (error)="onError($event)"></page-command-buttons>
+      (recover)="onRecover($event)" (error)="onError($event)"></cms-page-command-buttons>
     <br>
-    <page-status [model]="model"></page-status>
+    <cms-page-status [model]="model"></cms-page-status>
   </mat-card-actions>
 </mat-card>
