--- a/projects/StavesChurch/src/app/sermon/sermon/sermon.component.html
+++ b/projects/StavesChurch/src/app/sermon/sermon/sermon.component.html
@@ -1,10 +1,6 @@
-<mat-list *ngIf="errors?.general?.default">
-  <mat-list-item *ngFor="let item of errors.general.default">{{item}}</mat-list-item>
-</mat-list>
+<page-title name="Sermons"></page-title>
 
-<mat-toolbar>
-  <div>Sermons</div>
-</mat-toolbar>
+<general-error [errors]="errors"></general-error>
 
 <mat-card>
   <mat-card-content fxLayout="column" fxLayoutGap="1em">
