--- a/projects/mh-input-integer/src/lib/input-integer.component.html
+++ b/projects/mh-input-integer/src/lib/input-integer.component.html
@@ -1,3 +1,8 @@
-<p>
-  input-integer works!
-</p>
+<mat-form-field appearance="standard" style="width: 100%">
+  <mat-label>{{label}}</mat-label>
+  <input type="number" matInput [attr.name]="inputName" [attr.maxlength]="_maxlength" [attr.style]="_style"
+    [placeholder]="placeholder" [disabled]="disabled" [required]="required" [(ngModel)]="_model" [errorStateMatcher]="errorStateMatcher"
+    (change)="onChange()">
+  <mat-hint>{{hint}}</mat-hint>
+  <mat-error>{{errMsg}}</mat-error>
+</mat-form-field>
