--- a/projects/mh-input-text/src/lib/input-text.component.html
+++ b/projects/mh-input-text/src/lib/input-text.component.html
@@ -1,3 +1,7 @@
-<p>
-  input-text works!
-</p>
+<mat-form-field appearance="standard" style="width: 100%">
+  <mat-label>{{label}}</mat-label>
+  <input type="text" matInput [attr.name]="inputName" [attr.maxlength]="_maxlength" [attr.style]="_style" [placeholder]="placeholder"
+    [disabled]="disabled" [required]="required" [(ngModel)]="_model" [errorStateMatcher]="errorStateMatcher" (change)="onChange()">
+  <mat-hint>{{hint}}</mat-hint>
+  <mat-error>{{errMsg}}</mat-error>
+</mat-form-field>
