--- a/projects/StavesChurch/src/app/admin/announcement/admin-announcement-edit.component.html
+++ b/projects/StavesChurch/src/app/admin/announcement/admin-announcement-edit.component.html
@@ -5,30 +5,17 @@
 <mat-card>
   <mat-card-content>
     <div fxLayout="row" fxLayoutAlign="start baseline" fxLayoutGap="2em">
-      <mat-form-field style="height: 6em; width: 9em">
-        <input matInput [matDatepicker]="fromPicker" placeholder="Effective from" [(ngModel)]="model.effectiveFrom"
-          (dateChange)="saveStream.next()" [errorStateMatcher]="createErrorStateMatcher('effectiveFrom')" [disabled]="readOnly">
-        <mat-datepicker-toggle matSuffix [for]="fromPicker"></mat-datepicker-toggle>
-        <mat-datepicker #fromPicker></mat-datepicker>
-        <mat-error>{{errors?.effectiveFrom}}</mat-error>
-      </mat-form-field>
+      <input-date [model]="model.effectiveFrom" (modelChange)="onEffectiveFromChange($event)" label="Effective from"
+        placeholder="mm/dd/yyyy" [disabled]="readOnly" [errMsg]="errors?.effectiveFrom"></input-date>
 
-      <mat-form-field style="height: 6em; width: 9em">
-        <input matInput [matDatepicker]="toPicker" placeholder="Effective to" [(ngModel)]="model.effectiveTo"
-          (dateChange)="saveStream.next()" [errorStateMatcher]="createErrorStateMatcher('effectiveTo')" [disabled]="readOnly">
-        <mat-datepicker-toggle matSuffix [for]="toPicker"></mat-datepicker-toggle>
-        <mat-datepicker #toPicker></mat-datepicker>
-        <mat-error>{{errors?.effectiveTo}}</mat-error>
-      </mat-form-field>
+      <input-date [model]="model.effectiveTo" (modelChange)="onEffectiveToChange($event)" label="Effective to"
+        placeholder="mm/dd/yyyy" [disabled]="readOnly" [errMsg]="errors?.effectiveTo"></input-date>
 
       <mat-slide-toggle [(ngModel)]="model.content.urgent" (change)="saveStream.next()">Urgent</mat-slide-toggle>
     </div>
 
-    <mat-form-field style="width: 100%; margin-top: 1em;">
-      <input matInput placeholder="Title" maxlength="128" [(ngModel)]="model.content.title" (change)="saveStream.next()"
-        [errorStateMatcher]="createErrorStateMatcher('content.title')" [disabled]="readOnly">
-      <mat-error>{{errors?.content?.title}}</mat-error>
-    </mat-form-field>
+    <input-text label="Title" maxlength="128" [model]="model.content.title" (modelChange)="onTitleChange($event)"
+      [errMsg]="errors?.content?.title"></input-text>
 
     <cms-editor [content]="model.content.description" (changed)="onContentChange($event)" [disabled]="readOnly"></cms-editor>
   </mat-card-content>
