--- a/projects/material-cms-admin/src/lib/editor/choose-external-link.component.html
+++ b/projects/material-cms-admin/src/lib/editor/choose-external-link.component.html
@@ -1,9 +1,10 @@
 <mat-card>
   <mat-card-content>
-    <mat-form-field style="width: 100%;">
+    <input-text style="width: 100%;" placeholder="External link" [errMsg]="extUrlError" [model]="extUrl" (modelChange)="extUrl = $event"></input-text>
+    <!-- <mat-form-field style="width: 100%;">
       <input matInput placeholder="External link" [(ngModel)]="extUrl" [errorStateMatcher]="extUrlErrorStateMatcher">
       <mat-error>{{extUrlError}}</mat-error>
-    </mat-form-field>
+    </mat-form-field> -->
   </mat-card-content>
   <mat-card-actions>
     <button mat-raised-button color="accent" (click)="onOKClick()">OK</button>
