--- a/projects/material-cms-admin/src/lib/page/edit/page-edit.component.html
+++ b/projects/material-cms-admin/src/lib/page/edit/page-edit.component.html
@@ -4,13 +4,16 @@
 
 <mat-card>
   <mat-card-content>
-    <mat-form-field style="height: 6em; width: 9em">
+    <input-date style="height: 6em; width: 9em" placeholder="Effective from" [model]="model.effectiveFrom" [disabled]="readOnly"
+      [errMsg]="errors?.effectiveFrom" (modelChange)="onEffectiveFromChange($event)"></input-date>
+
+    <!-- <mat-form-field style="height: 6em; width: 9em">
       <input matInput [matDatepicker]="picker" placeholder="Effective from" [(ngModel)]="model.effectiveFrom"
         (dateChange)="saveStream.next()" [errorStateMatcher]="createErrorStateMatcher('effectiveFrom')" [disabled]="readOnly">
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
       <mat-error>{{errors?.effectiveFrom}}</mat-error>
-    </mat-form-field>
+    </mat-form-field> -->
   </mat-card-content>
 
   <cms-editor [content]="model.content" (changed)="onContentChange($event)" [disabled]="readOnly"></cms-editor>
