--- a/projects/VinesToWinesDM/src/app/about-us/about-us-detail.component.html
+++ b/projects/VinesToWinesDM/src/app/about-us/about-us-detail.component.html
@@ -1,4 +1,4 @@
-<page-title name="About Us" [canAddNew]="false"></page-title>
+<page-title name="About Us"></page-title>
 
 <mat-card>
   <mat-card-content>
