--- a/projects/VinesToWinesDM/src/app/events/events-summary/events-summary.component.html
+++ b/projects/VinesToWinesDM/src/app/events/events-summary/events-summary.component.html
@@ -11,7 +11,9 @@
     <h4 mat-line>
       {{item.summary}}
     </h4>
-    <p mat-line matTooltip="{{item.location}}" *ngIf="item.location"> {{item.location.split(',')[0]}} </p>
+    <p mat-line *ngIf="item.location">
+      <a href="https://www.google.com/maps?q={{item.location}}" target="_blank" rel="noopener">{{item.location.split(',')[0]}}</a>
+    </p>
     <p mat-line *ngIf="!item.end"> &nbsp; </p>
     <p mat-line *ngIf="item.end && item.end.getHours() === 23"> {{item.start | date:'MMM dd'}} - {{item.end | date:'MMM dd'}}</p>
     <p mat-line *ngIf="item.end && item.end.getHours() < 23"> {{item.start | date:'shortTime'}} - {{item.end | date:'shortTime'}}</p>
