--- a/projects/VinesToWinesDM/src/app/events/events-summary/events-summary.component.scss
+++ b/projects/VinesToWinesDM/src/app/events/events-summary/events-summary.component.scss
@@ -1,4 +1,4 @@
-@import '../../../styles.scss';
+@import '../../../styles/theme';
 
 :host ::ng-deep .mat-list-item-content {
   padding: 0 !important;
