--- a/projects/VinesToWinesDM/src/app/admin/events/admin-events.component.html
+++ b/projects/VinesToWinesDM/src/app/admin/events/admin-events.component.html
@@ -1,4 +1,4 @@
-<page-title name="Calendar"></page-title>
+<page-title name="Events"></page-title>
 
 <mat-card>
   <mat-card-content>
@@ -7,7 +7,7 @@
     </p>
     <p>
       Make sure that you are using the right calendar by clicking the little circle on the top right and ensuring that the
-      1<sup>st</sup> user shown is Staves Church. If it isn't, click on Staves Church.
+      1<sup>st</sup> user shown is Vines to Wines. If it isn't, click on Vines to Wines.
     </p>
   </mat-card-content>
   <mat-card-actions>
