--- a/projects/VinesToWinesDM/src/app/admin/wines/admin-wines-edit.component.html
+++ b/projects/VinesToWinesDM/src/app/admin/wines/admin-wines-edit.component.html
@@ -7,31 +7,11 @@
     <input-date [model]="model.effectiveFrom" (modelChange)="onEffectiveFromChange($event)" label="Effective from"
       placeholder="mm/dd/yyyy" [disabled]="readOnly" [errMsg]="errors?.effectiveFrom"></input-date>
 
-    <h2 style="margin:0">Header</h2>
-    <cms-editor [content]="model.content.header" (changed)="onHeaderChange($event)" [disabled]="readOnly"></cms-editor>
+    <admin-wine [model]="model" kind="reds" name="Red Wines" [errors]="errors" (modelChange)="saveStream.next()"></admin-wine>
 
-    <h2 style="margin-top:1em;margin-bottom: -1em">Wines</h2>
-    <section style="margin-top: 1em" *ngFor="let item of model.content.list; let i=index">
-      <section fxLayout="row">
-        <input-text fxFlex="grow" [model]="item.name" (modelChange)="onMinistryNameChange(item, $event)" label="Name"
-          [disabled]="readOnly" [errMsg]="errors?.content?.list[i]?.name"></input-text>
-        <button mat-icon-button matTooltip="Add ministry" matTooltipShowDelay="500" (click)="addAfter(item)" [disabled]="readOnly">
-          <mat-icon>add</mat-icon>
-        </button>
-        <button mat-icon-button matTooltip="Remove ministry" matTooltipShowDelay="500" (click)="remove(item)"
-          [disabled]="readOnly">
-          <mat-icon>remove</mat-icon>
-        </button>
-        <button mat-icon-button matTooltip="Move up" matTooltipShowDelay="500" (click)="moveUp(item)" [disabled]="readOnly || i === 0">
-          <mat-icon>arrow_upward</mat-icon>
-        </button>
-        <button mat-icon-button matTooltip="Move down" matTooltipShowDelay="500" (click)="moveDown(item)" [disabled]="readOnly || i === model.content.list.length-1">
-          <mat-icon>arrow_downward</mat-icon>
-        </button>
-      </section>
+    <admin-wine [model]="model" kind="whites" name="White Wines" [errors]="errors" (modelChange)="saveStream.next()"></admin-wine>
 
-      <cms-editor [content]="item.purpose" (changed)="onMinistryPurposeChange(item, $event)" [disabled]="readOnly"></cms-editor>
-    </section>
+    <admin-wine [model]="model" kind="speciality" name="Speciality Wines" [errors]="errors" (modelChange)="saveStream.next()"></admin-wine>
   </mat-card-content>
 
   <mat-card-actions>
