--- a/projects/VinesToWinesDM/src/app/wines/wines.component.html
+++ b/projects/VinesToWinesDM/src/app/wines/wines.component.html
@@ -2,25 +2,28 @@
 
 <general-error [errors]="errors"></general-error>
 
-<mat-card *ngIf="showOverview">
-  <mat-card-header>
-    <mat-card-title>Premium Red Wines</mat-card-title>
-  </mat-card-header>
-  <mat-card-content (click)="onContentClick($event)">
-    <mat-nav-list>
-      <mat-list-item *ngFor="let item of model.reds">
-        <img matListAvatar src="..." alt="...">
-        <a matLine routerLink="{{item.name}}">{{item.name}}</a>
-        <button mat-icon-button (click)="showInfo(link)">
-          <mat-icon>info</mat-icon>
-        </button>
-      </mat-list-item>
-    </mat-nav-list>
-  </mat-card-content>
-  <mat-card-actions>
-    <button mat-raised-button color="accent" (click)="onOKClick()">OK</button>
-  </mat-card-actions>
-</mat-card>
+<section *ngIf="showOverview">
+  <mat-card *ngFor="let wineType of wineTypes">
+    <mat-card-header>
+      <mat-card-title>{{wineType.name}}</mat-card-title>
+      <mat-card-subtitle>{{wineType.description}}</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content (click)="onContentClick($event)">
+      <mat-nav-list>
+        <mat-list-item *ngFor="let item of wineType.wines">
+          <img matListAvatar src="..." alt="...">
+          <a matLine routerLink="{{wineType.name}}/{{item.name}}">{{item.name}}</a>
+          <button mat-icon-button (click)="showInfo(wineType.name, item.name)">
+            <mat-icon>info</mat-icon>
+          </button>
+        </mat-list-item>
+      </mat-nav-list>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-raised-button color="accent" (click)="onOKClick()">OK</button>
+    </mat-card-actions>
+  </mat-card>
+</section>
 
 <mat-card *ngIf="!showOverview">
   <mat-card-header>
